Add max errors and expected annotations to snapshots. Rename ingress flows to normalize flows.